[package]
name = "turbo_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# BiTurbo
turbo_app = { path = "../turbo_app" }
turbo_core = { path = "../turbo_core" }
turbo_window = { path = "../turbo_window" }
turbo_ecs = { path = "../turbo_ecs" }

# Other
ash       = "0.37.2+1.3.238"
gpu-allocator = "0.22.0"
num       = "0.4.0"
cgmath    = "0.18.0"
memoffset = "0.8.0"
bitmask-enum = "2.1.0"
stb_image = "0.2.4"
gltf = "1.0.0"
imgui = "0.11.0"
byte-unit = "4.0.19"
glfw = "0.51.0"

[dependencies.bitflags]
version = ">= 1.0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

###############################################################################
#                               BUILD SETTINGS
###############################################################################

[lib]
name = "turbo_render"
crate-type = ["lib"]
path = "src/lib.rs"

[profile.dev]                           # Modify profile settings via config.
opt-level = 0                           # Optimization level.
debug = true                            # Include debug info.
debug-assertions = true                 # Enables debug assertions.
overflow-checks = true                  # Enables runtime integer overflow checks.
lto = false                             # Sets link-time optimization.
panic = 'unwind'                        # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 16                      # Number of code generation units.
rpath = false                           # Sets the rpath linking option.

[profile.release]                       # Modify profile settings via config.
opt-level = 3                           # Optimization level.
debug = true                           # Include debug info.
debug-assertions = false                # Enables debug assertions.
overflow-checks = false                 # Enables runtime integer overflow checks.
lto = false                              # Sets link-time optimization.
panic = 'abort'                         # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 1                       # Number of code generation units.
rpath = false                           # Sets the rpath linking option.